--- a/config.toml
+++ b/config.toml
@@ -1,13 +1,6 @@
 [theme]
-base="dark"
-primary="dark-gray"
-secondary="white"
-accent="blue"
-
-[theme.font]
-family="Arial"
-size=12
-
-[theme.button]
-color="gray"
-size=12
+primaryColor="#007bff"  
+backgroundColor="#ffffff" 
+secondaryBackgroundColor="#f8f8f8"
+textColor="#262730"
+font="sans serif"
