--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,7 @@ st-paywall
 mkdocs
 streamlit>=1.30.0
 python-dotenv
-google-generativeai
-langchain-google-genai
+openai
 langchain
 langchain_community
 streamlit-extras
