--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,12 @@
-stripe
-httpx-oauth
-pyjwt
-st-paywall
-mkdocs
-streamlit>=1.30.0
+streamlit
 python-dotenv
 google-generativeai
 langchain-google-genai
 langchain
 langchain_community
 streamlit-extras
-fpdf
 streamlit-multipage
 streamlit-folium
-google.generativeai
-jupyter
 extra_streamlit_components
 streamlit-elements
 streamlit-tailwind
